[package]
name = "math_images_processor"
version = "0.1.0"
edition = "2021"
authors = ["Taylor Hoffmann <taylor@hotay.dev>"]
description = "A Rust library for preprocessing images of mathematical formulas, ideally for machine learning applications for formula recognition."
license = "MIT"
repository = "https://github.com/TaylorHo/math_images_processor"
keywords = ["image", "preprocessing", "mathematics"]
categories = ["image-processing", "mathematics"]

exclude = ["example-formulas/"]

[dependencies]
image = "^0.25.5"
