[package]
name = "math_images_processor"
version = "0.1.1"
edition = "2021"
authors = ["Taylor Hoffmann <taylor@hotay.dev>"]
description = "A Rust library for preprocessing images of mathematical formulas, ideally for machine learning applications for formula recognition."
license = "MIT"
repository = "https://github.com/TaylorHo/math_images_processor"
keywords = [
  "image",
  "preprocessing",
  "mathematics",
  "science",
  "machine-learning",
]
categories = [
  "science",
  "mathematics",
  "encoding",
  "multimedia::images",
  "command-line-utilities",
]

exclude = ["example-formulas/", "processed-formulas/"]

[dependencies]
image = "^0.25.5"
tokio = { version = "^1.41.1", features = [
  "fs",
  "rt",
  "macros",
  "rt-multi-thread",
] }
